worked on categories generation route
