# src/swagger-output.json
@@ -84,6 +84,19 @@
         }
       }
     },
+    "/generate-categories": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/auth/linkedin": {
       "get": {
         "description": "",
